--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ MONGODB_URI= mongodb+srv://ay005562:rock@cluster0.zzx0g.mongodb.net/mern?retryWr
 
 TOKEN_SECRET_KEY="DJFDKJDJFGOIEJDGJDLKFGJEJROIJLDKGDOGGU"
 
-FRONTEND_URL= https://ecommerce-3-1mul.onrender.com
+FRONTEND_URL= http://localhost:3000
 
 PORT=8080
 
