--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ MONGODB_URI= mongodb+srv://ay005562:rock@cluster0.zzx0g.mongodb.net/mern?retryWr
 
 TOKEN_SECRET_KEY="DJFDKJDJFGOIEJDGJDLKFGJEJROIJLDKGDOGGU"
 
-
+REACT_APP_BACKEND_URL=http://localhost:8080
 
 PORT=8080
 
